Fix z-index

--- a/src/index.css
+++ b/src/index.css
@@ -5,6 +5,7 @@
 
 * {
     font-family: 'Libre Baskerville', 'serif';
+    scroll-behavior: smooth;
 }
 
 .launch-bar {
